# smart-sync

./: .env.example  .eslintrc.json  .gitignore  .npmignore  .npmrc  Gruntfile.js  ProxyContract.sol  README.md  cross-chain-cli-1.0.0.tgz  docker-compose.yml  exec_eval.sh  exec_tests.sh  hardhat.config.ts  package-lock.json  package.json  truffle-config.js  tsconfig.json
chain/: docker-compose.yml
chain2/: .gitignore  disco-spec.json  docker-compose.yml
chains/: .gitignore  README.md  disco-spec.json  docker-compose.yml  evaluation-config.toml  evaluation-disco-spec.json  evaluation-docker-compose.yml  goerli-config.toml  goerli-docker-compose.yml  goerli.json  single-docker-compose.yml
client/: .gitignore  hardhat.config.ts  index.ts  package-lock.json  package.json  tsconfig.json
config/: cli-config.json  config.toml  disco-spec.json
contracts/: CallRelayContract.sol  CallingContract.sol  GetProofLib.sol  MappingContract.sol  MerklePatriciaProof.sol  Migrations.sol  ProxyContract.sol  RLPWriter.sol  Relay.sol  RelayContract.sol  SimpleContract.sol  StorageImitator.sol  TestLogicContract.sol  TestProxyContract.sol
demo/: smart-sync-demo.ts
evaluation/: eval-utils.ts  get-mt-for-map-sizes-1-1000.ts  update-multiple-deep-values-with-map-sizes-1-1000.ts  update-multiple-values-random-with-map-sizes-1-1000.ts  update-multiple-values-with-map-sizes-1-1000.ts  update-one-value-per-mpt-height-with-map-sizes-1-to-1000.ts  update-one-value-with-map-sizes-1-1000.ts  (+1 more)
hardhat_scripts/: list-storage.ts  (+1 more)
openethereum-test/: Cargo.toml
openethereum-test/src/: main.rs
(+144 files in other folders)
