[package]
name = "openethereum-test"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@tu-berlin.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.9.2"
hash-db = "0.15.2"
hex = "0.4.2"
keccak-hasher = "0.15.3"
memory-db = "0.24.1"
reference-trie = "0.22.0"
